--- a/evenements2.html
+++ b/evenements2.html
@@ -85,72 +85,81 @@
                                                                     <!--calendrier-->
     
     <div id="calendrier"> 
-        <div class="element-calendrier zoom">
-        <img class="onep" src="image/japan_expo.jpg" alt="">
-        <p>Diffusion: Samedi 23 Janvier 2021</p>
-        <p>Diffusion d'un court-métrage réalisé par nos collaborateurs de la Japan Expo</p>
-        </div>
-        <div class="element-calendrier zoom">
-        <img class="onep" src="image/combat_sumo.jpg" alt="">
-        <p>Diffusion: Lundi 25 Janvier 2021</p>
-        <p>Diffusion d'épisodes de l'anim&eacute; Naruto en compagnie de dessinateurs de mangas</p>
-        </div>
-        <div class="element-calendrier zoom">
-        <img class="onep" src="image/akira_toriyama.jpg" alt="">
-        <p>Diffusion: Mardi 26 Janvier 2021</p>
-        <p>Recontre avec l'auteur d'un des mangas les plus connus au Japon et dans le monde entier : Akira Toriyama</p>
-        </div>
-        <div class="element-calendrier zoom">
+        <div class="element-calendrier" class="zoom">
         <img class="onep" src="image/one_piece.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
         </div>
-        <div class="element-calendrier zoom">
+        <div class="element-calendrier">
         <img class="onep" src="image/combat_sumo.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
         </div>
-        <div class="element-calendrier zoom">
+        <div class="element-calendrier">
         <img class="onep" src="image/atelier_dessin.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
         </div>
-        <div class="element-calendrier zoom">
+        <div class="element-calendrier">
         <img class="onep" src="image/one_piece.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
         </div>
-        <div class="element-calendrier zoom">
+        <div class="element-calendrier">
         <img class="onep" src="image/combat_sumo.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
         </div>
-        <div class="element-calendrier zoom">
+        <div class="element-calendrier">
         <img class="onep" src="image/atelier_dessin.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
         </div>
-        <div class="element-calendrier zoom">
+        <div class="element-calendrier">
         <img class="onep" src="image/one_piece.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
         </div>
-        <div class="element-calendrier zoom">
+        <div class="element-calendrier">
         <img class="onep" src="image/combat_sumo.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
         </div>
-        <div class="element-calendrier zoom">
+        <div class="element-calendrier">
+        <img class="onep" src="image/atelier_dessin.jpg" alt="">
+        <p>Diffusion: Samedi 23 Janvier 2021</p>
+        <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
+        </div>
+        <div class="element-calendrier">
+        <img class="onep" src="image/one_piece.jpg" alt="">
+        <p>Diffusion: Samedi 23 Janvier 2021</p>
+        <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
+        </div>
+        <div class="element-calendrier">
+        <img class="onep" src="image/combat_sumo.jpg" alt="">
+        <p>Diffusion: Samedi 23 Janvier 2021</p>
+        <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
+        </div>
+        <div class="element-calendrier">
         <img class="onep" src="image/atelier_dessin.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
         </div>
     </div>
     <div>
-    <a href="evenements2.html"><img id="rtransitionarrow" src="image/rarrow.png" alt=""></a>
+    <a href="evenements.html"><img id="ltransitionarrow" src="image/larrow.png" alt=""></a>
+    </div>
+
+                                                                    <!--images-->
+
+    <div id="images">
+        <img src="image/one_piece.jpg" alt=""/>
+        <img src="image/combat_sumo.jpg" alt=""/>
+        <img src="image/akira_toriyama.jpg" alt=""/>
+        <img src="image/pokemon.jpg" alt=""/>
+        <img src="image/naruto.jpg" alt=""/>
     </div>
 <!-- Balise <hr> pour la séparation entre les évènements du calendrier -->
-    </br>
 
 
     <footer>
