--- a/evenements2.html
+++ b/evenements2.html
@@ -37,28 +37,25 @@
           <table width="400" border="0">
             <tbody>
               <tr>
-                <td><a href="evenements.html">&Eacute;vènements</a></td>
-              </tr>
-              <tr>
-                <td><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></td>
+                <td><a href="evenements.html">Agenda</a></td>
               </tr>
               <tr>
                 <td><a href="billeterie.html">Billeterie</a></td>
               </tr>
               <tr>
-                <td><a href="forum.html">Forum</a></td>
-              </tr>
-              <tr>
-                <td><a href="help.html">Help</a></td>
-              </tr>
-              <tr>
                 <td><a href="contact.html">Réseaux sociaux</a></td>
+              </tr>
+              <tr>
+                <td><a href="forum.html">Forum</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Nous contacter</a></td>
               </tr>
               <tr>
                 <td><a href="plan_du_site.html">Plan du site</a></td>
+              </tr>
+              <tr>
+                <td><a href="acces.html">Accès</a></td>
               </tr>
               <tr>
                 <td><a href="contact.html">Informations pratiques</a></td>
@@ -70,15 +67,12 @@
 
         <!-- menu déroulant -->
       <ul>
-        <li class="deroulant"><a href="evenements.html">&Eacute;vènements</a>
-          <ul class="sous">
-            <li class="sous2"><a href="#">Actualités</a></li>
-            <li class="sous2"><a href="https://www.mcjp.fr/fr/agenda">Agenda</a></li>
-          </ul>
-        </li>
+        <div id="evenement">
+          <li class="sous2"><a href="evenements.html">Agenda</a></li>
+        </div>
         <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
-        <li class="sous2"><a href="#">Contact</a></li>
+        <li class="sous2"><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
 
@@ -150,15 +144,6 @@
     <a href="evenements.html"><img id="ltransitionarrow" src="image/larrow.png" alt=""></a>
     </div>
 
-                                                                    <!--images-->
-
-    <div id="images">
-        <img src="image/one_piece.jpg" alt=""/>
-        <img src="image/combat_sumo.jpg" alt=""/>
-        <img src="image/akira_toriyama.jpg" alt=""/>
-        <img src="image/pokemon.jpg" alt=""/>
-        <img src="image/naruto.jpg" alt=""/>
-    </div>
 <!-- Balise <hr> pour la séparation entre les évènements du calendrier -->
 
 
