--- a/acces.html
+++ b/acces.html
@@ -79,11 +79,14 @@
 <!--Commentaire--> 
     <div id="commentaire">
       <h3>交通アクセス ・ VENIR A LA MCJP</h3>
-      <p class="adresse">ADRESSE DE LA MCJP</p>
-      <p>101 bis, quai Branly</p>
-      <p>75015 Paris</p>
-      
-      </div>
+      <p class="adresse">ADRESSE DE LA MCJP :</p>
+      <p class="adresse1">101 bis, quai Branly</p>
+      <p class="adresse1">75015 Paris</p>
+      </br>
+      <p class="adresse">METRO :</p>
+      <p class="adresse1">Ligne 6 : M° Bir-Hakeim</p>
+      <p class="adresse1">RER C : Champ de Mars – Tour Eiffel </p>
+      <img src="image/acces_mcjp.png" alt="Accès MCJP"/>
     </div>
 
   
