réalisation page contact

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Maison de la Culture du Japon</title>
-    <link href="acces.css" rel="stylesheet" type="text/css" />
+    <link href="contact.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
   </head>
 
@@ -79,15 +79,27 @@
 <!--Commentaire--> 
     <div id="commentaire">
       <h1>お問い合わせ ・ NOUS CONTACTER</h1>
-      <p class="adresse">ADRESSE DE LA MCJP :</p>
-      <p class="adresse1">101 bis, quai Branly</p>
-      <p class="adresse1">75015 Paris</p>
-      </br>
-      <p class="adresse">METRO :</p>
-      <p class="adresse1">Ligne 6 : M° Bir-Hakeim</p>
-      <p class="adresse1">RER C : Champ de Mars – Tour Eiffel </p>
-      </br>
-      <img src="image/acces_mcjp.png" alt="Accès MCJP"/>
+      
+      <p class="texte1">Cher public, </p>
+      <p class="texte1">Seules les demandes en rapport direct avec nos activités seront traitées à l'adresse contact@mcjp.fr </p>
+      <p class="texte1">Les réservations se font désormais en ligne, à l'accueil ou au 01-44-37-95-95. </p>
+      <p class="texte1">Pour être informés de notre actualité n'hésitez pas à nous suivre sur 
+        <strong>les Réseaux Sociaux</strong> : <a href="https://www.facebook.com/MCJP.officiel">Facebook</a>, 
+                                            <a href="https://twitter.com/mcjp_officiel">Twitter</a> ou 
+                                            <a href="https://www.instagram.com/mcjp_officiel/">Instagram</a></p>
+
+      <p class="texte">RECRUTEMENT</p>
+      <p class="texte1">Nous n’avons aucun poste ni aucun stage à pour­voir actuel­le­ment.</p>
+      <p class="texte1">Une page dédiée au recru­te­ment sera créée lors­que ce sera néces­saire.</p>
+      <p class="texte1">Nous ne trai­tons donc pas les can­di­da­tu­res spon­ta­nées.</p>
+
+      <p class="texte">INFORMATIONS GENERALES SUR LE JAPON</p>
+      <p class="texte1">Les demandes d'informations générales sur le Japon peuvent trouver leurs réponses sur la page du site principal :  
+        <a href="https://www.mcjp.fr/fr/informations-pratiques/contacts/informations-generales-sur-le-japon">Informations générales</a></p>
+      <p class="texte1">A très bientôt, </p>
+      <p class="texte1">La MCJP </p>
+
+      
     </div>
 
   
