--- a/evenements.html
+++ b/evenements.html
@@ -85,37 +85,37 @@
         <div class="element-calendrier zoom">
         <img class="onep" src="image/japan_expo.jpg" alt="">
         <p>Diffusion: Samedi 23 Janvier 2021</p>
-        <p>Diffusion d'un court-métrage réalisé par nos collaborateurs de la Japan Expo</p>
+        <p>Diffusion d'un court-métrage réalisé par nos collaborateurs de la Japan Expo<a href="billeterie.html" class="ensavoirplus">R&eacute;server</a></p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/naruto.jpg" alt="">
         <p>Diffusion: Lundi 25 Janvier 2021</p>
-        <p>Diffusion d'épisodes de l'anim&eacute; Naruto en compagnie de dessinateurs de mangas</p>
+        <p>Diffusion d'épisodes de l'anim&eacute; Naruto en compagnie de dessinateurs de mangas<a href="billeterie.html" class="ensavoirplus">R&eacute;server</a></p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/akira_toriyama.jpg" alt="">
         <p>Diffusion: Mardi 26 Janvier 2021</p>
-        <p>Recontre avec l'auteur d'un des mangas les plus connus au Japon et dans le monde entier : Akira Toriyama</p>
+        <p>Recontre avec l'auteur d'un des mangas les plus connus au Japon et dans le monde entier : Akira Toriyama <a href="billeterie.html" class="ensavoirplus">R&eacute;server</a></p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/promised_neverland.jpg" alt="">
         <p>Diffusion: Mercredi 27 Janvier 2021</p>
-        <p>Venez nombreux visionner en notre compagnie les 2 premiers &eacute;pisodes de l'anim&eacute; tant attendu "The Promised Neverland"</p>
+        <p>Venez nombreux visionner en notre compagnie les 2 premiers &eacute;pisodes de l'anim&eacute; tant attendu "The Promised Neverland"<a href="billeterie.html" class="ensavoirplus">R&eacute;server</a></p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/one_piece.jpg" alt="">
         <p>Diffusion: Jeudi 28 Janvier 2021</p>
-        <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
+        <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !<a href="billeterie.html" class="ensavoirplus">R&eacute;server</a></p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/combat_sumo.jpg" alt="">
         <p>Spectacle: Vendredi 29 Janvier 2021</p>
-        <p>Pour les amateurs de lutte japonaise, venez assister &aacute; un combat r&eacute;el et discuter avec les Sumos les plus titr&eacute;s du monde entier !</p>
+        <p>Pour les amateurs de lutte japonaise, venez assister &aacute; un combat r&eacute;el et discuter avec les Sumos les plus titr&eacute;s du monde entier !<a href="billeterie.html" class="ensavoirplus">R&eacute;server</a></p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/pokemon.jpg" alt="">
         <p>Atelier: Samedi 30 Janvier 2021</p>
-        <p>Pour les amateurs d'anciennes consoles, apportez votre Gameboy Color et votre jeu Pokémon afin de vous amuser en compagnie d'autres fans du célèbre jeu Japonais encore très réputé à ce jour !</p>
+        <p>Pour les amateurs d'anciennes consoles, apportez votre Gameboy Color et votre jeu Pokémon afin de vous amuser en compagnie d'autres fans du célèbre jeu Japonais encore très réputé à ce jour !<a href="billeterie.html" class="ensavoirplus">R&eacute;server</a></p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/dessins3.jpg" alt="">
@@ -130,7 +130,7 @@
         <div class="element-calendrier zoom">
         <img class="onep" src="image/cinema2.jpg" alt="">
         <p>Diffusion: Mercredi 3 F&eacute;vrier 2021</p>
-        <p>(Re)D&eacute;couvrez ce classique du cin&eacute;ma japonais :Hiroshi Shimizu.</p>
+        <p>(Re)d&eacute;couvrez ce classique du cin&eacute;ma japonais :Hiroshi Shimizu.</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/atelier_dessin.jpg" alt="">
