--- a/evenements.html
+++ b/evenements.html
@@ -143,7 +143,7 @@
         <p>Apprenez &aacute; fabriquer un ikebana miniature ! Parfait pour d&eacute;corer.</p>
         </div>
     </div>
-    <div>
+    <div id="arrows">
     <a href="evenements2.html"><img id="rtransitionarrow" src="image/rarrow.png" alt=""></a>
     </div>
 <!-- Balise <hr> pour la séparation entre les évènements du calendrier -->
