--- a/confidentialite.html
+++ b/confidentialite.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Maison de la Culture du Japon</title>
+    <title>Politique de Confidentialité - Maison de la Culture du Japon</title>
     <link href="confidentialite.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
   </head>
