--- a/confidentialite.html
+++ b/confidentialite.html
@@ -156,24 +156,28 @@
             du domicile des Utilisateurs à l’égard du traitement de leurs données personnelles.</p>
 
         <li>Mesures de gestion de la qualité</li>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-
+            <p class="texte1">Afin d’assurer la protection contre l’accès non autorisé aux données personnelles, les pertes, etc., 
+            de données personnelles, de prendre en compte le type de données personnelles, le degré de vulnérabilité et le degré d’influence économique 
+            et de préjudice mental causé aux Utilisateurs en cas de violation des données personnelles, la JF évalue et juge les risques de violations 
+            des données personnelles de manière complète, met en œuvre des mesures de gestion de sécurité personnelles, organisationnelles et techniques 
+            appropriées basées sur le risque de violation des données personnelles si nécessaire, contrôle ces mesures de gestion de la sécurité, 
+            établit un traitement de correction, et s’efforce constamment d’améliorer la sécurité.</p>
+            <p class="texte1">La JF doit s’efforcer de gérer adéquatement les données personnelles en limitant l’entrée de personnes extérieures dans 
+            les bureaux qui traitent des données personnelles, en organisant des activités éducatives de sensibilisation pour tous les dirigeants et 
+            les employés chargés de la protection des données personnelles, et en nommant un directeur responsable dans chaque service effectuant des 
+            traitements de données personnelles.</p>
 
         <li>Contact</li>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-            <p class="texte1">La JF doit traiter les données personnelles des Utilisateurs pour fournir, améliorer et développer les Services.</p>
-      </ol>
-
-      
+            <p class="texte1">Si les Utilisateurs désirent poser des questions ou exprimer des préoccupations à l’égard de cette Politique de 
+            Confidentialité ou du traitement des données personnelles par la JF, ou s’ils ont des demandes concernant l’accès aux données personnelles, 
+            la rectification, l’effacement ou la limitation du traitement de ces données, ou au sujet de la portabilité des données, prière de contacter 
+            la JF.</p>
+            <p class="texte1">Voici les coordonnées de contact de la JF:</p>
+            <p class="texte2">La Fondation du Japon / Maison de la culture du Japon à Paris</p>
+            <p class="texte2">101 bis, quai Branly 75740 Paris cedex 15, France</p>
+            <p class="texte2">01-44-37-95-00</p>
+            <p class="texte2">privacy@mcjp.fr</p>
+      </ol> 
     </div>
 
   
