--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
 
       <div class="slider">
         <div class="slides">
-          <div class="slide"><img src="image/japan_expo.jpg" /></div>
-          <div class="slide"><img src="image/naruto.jpg" /></div>
-          <div class="slide"><img src="image/akira_toriyama.jpg" /></div>
-          <div class="slide"><img src="image/promised_neverland.jpg" /></div>
-          <div class="slide"><img src="image/one_piece.jpg" /></div>
-          <div class="slide"><img src="image/combat_sumo.jpg" /></div>
-          <div class="slide"><img src="image/pokemon.jpg" /></div>
+          <div class="slide"><img src="image/japan_expo.jpg" alt="Japan Expo"/></div>
+          <div class="slide"><img src="image/naruto.jpg" alt="Naruto" /></div>
+          <div class="slide"><img src="image/akira_toriyama.jpg" alt="Akira Toriyama"/></div>
+          <div class="slide"><img src="image/promised_neverland.jpg" alt="The Promised Neverland"/></div>
+          <div class="slide"><img src="image/one_piece.jpg" alt="One Piece"/></div>
+          <div class="slide"><img src="image/combat_sumo.jpg" alt="Combat de Sumo"/></div>
+          <div class="slide"><img src="image/pokemon.jpg" alt="Pokémon"/></div>
         </div>
       </div>
     </div>
