--- a/evenements2.html
+++ b/evenements2.html
@@ -81,63 +81,63 @@
     <div id="calendrier"> 
         <div class="element-calendrier zoom">
         <img class="onep" src="image/pantoufle.jpg" alt="nuno-zori">
-        <p>Atelier: Vendredi 5 F&eacute;vrier 2021</p>
-        <p>Venez participer &agrave; l'atelier cr&eacute;ation de nuno-z&ocirc;ri</p>
+        <p><span id="Atelier">Atelier</span> - Vendredi 5 F&eacute;vrier 2021</p>
+        <p>Venez participer &agrave; l'atelier cr&eacute;ation de nuno-z&ocirc;ri.</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/jeu.jpg" alt="go">
-        <p>Cours: Samedi 6 F&eacute;vrier 2021</p>
+        <p><span id="Cours">Cours</span> - Samedi 6 F&eacute;vrier 2021</p>
         <p>Le Samedi 6 F&eacute;vrier 2021 aura lieu un cours de go, un jeu de soci&eacute;t&eacute; populaire au Japon.</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/jeu2.jpg" alt="shogi">
-        <p>Diffusion: Lundi 8 F&eacute;vrier 2021</p>
-        <p>Vous aurez le plaisir d'assister &agrave; un cours de sh&#333;gi un jeu de soci&eacute;t&eacute; traditionnel japonais. Venez aurez le prestige d'apprendre aux c&ocirct;t&eacute;s de joueurs de l&eacute;gende !</p>
+        <p><span id="Diffusion">Diffusion </span>- Lundi 8 F&eacute;vrier 2021</p>
+        <p>Vous aurez le plaisir d'assister &agrave; un cours de sh&#333;gi un jeu de soci&eacute;t&eacute; traditionnel japonais. Venez aurez le prestige d'apprendre aux c&ocirc;t&eacute;s de joueurs de l&eacute;gende !</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/cinema1.jpg" alt="blockbuster">
-        <p>Diffusion: Mardi 9 F&eacute;vrier 2021</p>
+        <p><span id="Diffusion">Diffusion </span>- Mardi 9 F&eacute;vrier 2021</p>
         <p>D&eacute;couvrez le dernier blockbuster japonais en notre compagnie !</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/dessin5.jpg" alt="kimishibai">
-        <p>Cours: Mercredi 10 F&eacute;vrier 2021</p>
+        <p><span id="Cours">Cours</span> - Mercredi 10 F&eacute;vrier 2021</p>
         <p>Apprenez &agrave; fabriquer votre propre kimishibai : Un th&eacute;&acirc;tre d'images. Une activit&eacute; tr&egrave;s ludique pour les enfants !</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/langue.jpg" alt="kana">
-        <p>Cours: Jeudi 11 F&eacute;vrier 2021</p>
+        <p><span id="Cours">Cours</span> - Jeudi 11 F&eacute;vrier 2021</p>
         <p>Assistez &agrave; une introduction &agrave; la langue japonaise avec un cours sur le syst&egrave;me d'&eacute;criture.</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/the.jpg" alt="the">
-        <p>Cours: Vendredi 12 F&eacute;vrier 2021</p>
+        <p><span id="Cours">Cours</span> - Vendredi 12 F&eacute;vrier 2021</p>
         <p>Ce cours vous permettra de conna&icirc;tre tout ce qu'il y a &agrave; savoir sur l'&eacute;laboration d'un th&eacute; traditionnel japonais.</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/snk.jpg" alt="Shingeki no Kyojin">
-        <p>Conf&eacute;rence: Samedi 13 F&eacute;vrier 2021</p>
+        <p><span id="Conference">Conf&eacute;rence</span> - Samedi 13 F&eacute;vrier 2021</p>
         <p>Le Samedi 13 F&eacute;vrier vous aurez l'honneur d'assister &agrave; une sc&eacute;ance de d&eacute;dicace du maitre mangaka Hajime Isayama en personne !</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/jeu3.jpg" alt="Jeu televise">
-        <p>Atelier: Lundi 15 F&eacute;vrier 2021</p>
+        <p><span id="Atelier">Atelier</span> - Lundi 15 F&eacute;vrier 2021</p>
         <p>Participez &agrave; une pr&eacute;sentation et jouez &agrave; ce jeu t&eacute;l&eacute;vis&eacute; japonais tr&egrave;s populaire et insolite.</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/raffinement.jpg" alt="Kaiseki">
-        <p>Cours: Mardi 16 F&eacute;vrier 2021</p>
+        <p><span id="Cours">Cours</span> - Mardi 16 F&eacute;vrier 2021</p>
         <p>D&eacute;couvrez tout ce qu'il y a &agrave; savoir sur le raffinement &agrave; la japonaise : la cuisine Kaiseki !</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/promised_neverland.jpg" alt="Promised Neverland">
-        <p>Diffusion: Mercredi 17 F&eacute;vrier 2021</p>
+        <p><span id="Diffusion">Diffusion </span>- Mercredi 17 F&eacute;vrier 2021</p>
         <p>D&eacute;couvrez le nouvel &eacute;pisode de The Promised Neverland en avant premi&egrave;re avec nous !</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/dessin2.jpg" alt="Calligraphie">
-        <p>Atelier: Jeudi 18 F&eacute;vrier 2021</p>
-        <p>Apprenez le dessin avec l'encre calligraphique avec des artistes professionnels</p>
+        <p><span id="Atelier">Atelier</span> - Jeudi 18 F&eacute;vrier 2021</p>
+        <p>Apprenez le dessin avec l'encre calligraphique avec des artistes professionnels.</p>
         </div>
     </div>
     <div>
