--- a/evenements.html
+++ b/evenements.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>&Eacute;vènement - Maison de la Culture du Japon</title>
+    <meta name="description" content="Maison de la Culture du Japon à Paris">
+    <title>&Eacute;vènements - Maison de la Culture du Japon</title>
     <link href="evenements.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
   </head>
@@ -61,7 +62,7 @@
                 <td><a href="plan_du_site.html">Plan du site</a></td>
               </tr>
               <tr>
-                <td><a href="contact.html">Informations pratiques</a></td>
+                <td><a href="horaires.html">Informations pratiques</a></td>
               </tr>
             </tbody>
           </table>
