--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Maison de la Culture du Japon à Paris">
     <title>Accueil - Maison de la Culture du Japon</title>
     <link href="index.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
@@ -58,7 +59,7 @@
                 <td><a href="acces.html">Accès</a></td>
               </tr>
               <tr>
-                <td><a href="contact.html">Informations pratiques</a></td>
+                <td><a href="horaires.html">Informations pratiques</a></td>
               </tr>
             </tbody>
           </table>
