--- a/confidentialite.html
+++ b/confidentialite.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Maison de la Culture du Japon à Paris">
     <title>Politique de Confidentialité - Maison de la Culture du Japon</title>
     <link href="confidentialite.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
@@ -58,7 +59,7 @@
                 <td><a href="acces.html">Accès</a></td>
               </tr>
               <tr>
-                <td><a href="contact.html">Informations pratiques</a></td>
+                <td><a href="horaires.html">Informations pratiques</a></td>
               </tr>
             </tbody>
           </table>
@@ -78,7 +79,7 @@
     
 <!--Commentaire--> 
     <div id="commentaire">
-      <h1>POLITIQUE DE CONFIDENTIALITE</h1>
+      <h1> 個人情報保護方針 ・ POLITIQUE DE CONFIDENTIALITE</h1>
       <p class="texte">Privacy Policy</p>
       <p class="texte1"><strong>Politique de Confidentialité</strong></p>  
 
