--- a/index.html
+++ b/index.html
@@ -80,18 +80,17 @@
 <!--calendrier-->
     <div id="body">
       <div id="calendrier"> 
-        <p>Samedi 23 Janvier 2021 : Venez nombreux visionner un court-métrage réalisé par nos collaborateurs de la Japan Expo
-         </p>
+        <p>Samedi 23 Janvier 2021 : Venez nombreux visionner un court-métrage réalisé par nos collaborateurs de la Japan Expo.</p>
         <hr>
-        <p>Lundi 25 Janvier 2021 : Venez visionner en compagnie de dessinateurs de mangas, l'animé Naruto</p>
+        <p>Lundi 25 Janvier 2021 : Venez visionner en compagnie de dessinateurs de mangas, l'animé Naruto.</p>
         <hr>
         <p>Mardi 26 Janvier 2021 : Vous aurez l'honneur de rencontrer l'auteur d'un des mangas les plus connus au Japon et dans le monde entier : 
-        Akira Toriyama</p>
+        Akira Toriyama.</p>
         <hr>
-        <p>Mercredi 27 Janvier 2021 : Venez nombreux visionner en notre compagnie les 2 premiers épisodes de l'animé tant attendu <em>"The Promised Neverland"</em></p>
+        <p>Mercredi 27 Janvier 2021 : Venez nombreux visionner en notre compagnie les 2 premiers épisodes de l'animé tant attendu <em>"The Promised Neverland"</em>.</p>
         <hr>
         <p>Jeudi 28 Janvier 2021 : Venez nombreux rencontrer des fans incontestés du manga 
-          <em>"One Piece"</em> et visionner un court épisode de l'animé en leur compagnie</p>
+          <em>"One Piece"</em> et visionner un court épisode de l'animé en leur compagnie.</p>
         <hr>
         <p>Vendredi 29 Janvier 2021 : Pour les amateurs de lutte japonaise, venez assister à un combat réel et discuter avec les Sumos les plus titrés du monde entier !</p>
         <hr>
