--- a/acces.html
+++ b/acces.html
@@ -79,7 +79,7 @@
     
 <!--Commentaire--> 
     <div id="commentaire">
-      <h1>お問い合わせ ・ NOUS CONTACTER</h1>
+      <h1>アクセス ・ ACC&Egrave;S</h1>
       <p class="adresse">ADRESSE DE LA MCJP :</p>
       <p class="adresse1">101 bis, quai Branly</p>
       <p class="adresse1">75015 Paris</p>
