--- a/forum.html
+++ b/forum.html
@@ -108,7 +108,7 @@
     <form action="/ma-page-de-traitement" method="post">
       <div>
         <label for="name">Nom :</label>
-        <input type="text" id="name" name="user_name" placeholder="Marie" autofocus required>
+        <input type="text" id="name" name="user_name" placeholder="Marie" >
       </div>
       <div>
         <label for="name">Objet :</label>
