--- a/billeterie.html
+++ b/billeterie.html
@@ -74,6 +74,7 @@
         <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
         <li class="sous2"><a href="contact.html">Contact</a></li>
+        <li class="sous2"><a href="https://www.mcjp.fr/">Maison de la culture</a></li>
       </ul>
     </nav>
 
@@ -82,49 +83,49 @@
       <div id="representation"> 
           <div class="ligne1">
               <p><strong>Sam. 23 Janvier 2021</strong></p>
-              <input type="number" min="0" max="5" step="1"/>             
+              <input type="number" min="0" max="5" step="1" placeholder="0" autofocus/>             
               <p>0.00 Euros (Gratuit)</p>
               <p><button>Réservation disponible</button></p>
           </div>
           <hr>
           <div class="ligne1">
               <p><strong>Lun. 25 Janvier 2021</strong></p>
-              <input type="number" min="0" max="5" step="1"/>
+              <input type="number" min="0" max="5" step="1" placeholder="0"/>
               <p>0.00 Euros (Gratuit)</p>
               <p><button>Réservation disponible</button></p>
           </div>
           <hr>
           <div class="ligne1">
               <p><strong>Mar. 26 Janvier 2021</strong></p>
-              <input type="number" min="0" max="5" step="1"/>
+              <input type="number" min="0" max="5" step="1" placeholder="0"/>
               <p>0.00 Euros (Gratuit)</p>
               <p><button>Réservation disponible</button></p>
           </div>
           <hr>
           <div class="ligne1">
               <p><strong>Mer. 27 Janvier 2021</strong></p>
-              <input type="number" min="0" max="5" step="1"/>
+              <input type="number" min="0" max="5" step="1" placeholder="0"/>
               <p>0.00 Euros (Gratuit)</p>
               <p><button>Réservation disponible</button></p>
           </div>
           <hr>
           <div class="ligne1">
               <p><strong>Jeu. 28 Janvier 2021</strong></p>
-              <input type="number" min="0" max="5" step="1"/>
+              <input type="number" min="0" max="5" step="1" placeholder="0"/>
               <p>0.00 Euros (Gratuit)</p>
               <p><button>Réservation disponible</button></p>
           </div>
           <hr>
           <div class="ligne1">
               <p><strong>Ven. 29 Janvier 2021</strong></p>
-              <input type="number" min="0" max="5" step="1"/>
+              <input type="number" min="0" max="5" step="1" placeholder="0"/>
               <p>0.00 Euros (Gratuit)</p>
               <p><button class="indisponible">Réservation indisponible</button></p>
           </div>
           <hr>
           <div class="ligne1">
               <p><strong>Sam. 30 Janvier 2021</strong></p>
-              <input type="number" min="0" max="5" step="1"/>
+              <input type="number" min="0" max="5" step="1" placeholder="0"/>
               <p>0.00 Euros (Gratuit)</p>
               <p><button class="indisponible">Réservation indisponible</button></p>
           </div>
