--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <li class="sous2"><a href="billeterie.html">Billeterie</a></li>
         <li class="sous2"><a href="forum.html">Forum</a></li>
         <li class="sous2"><a href="contact.html">Contact</a></li>
+        <li class="sous2"><a href="https://www.mcjp.fr/">Maison de la culture</a></li>
       </ul>
     </nav>
 
