--- a/evenements.html
+++ b/evenements.html
@@ -119,9 +119,9 @@
           <p>Pour les amateurs d'anciennes consoles, apportez votre Gameboy Color et votre jeu Pokémon afin de vous amuser en compagnie d'autres fans du célèbre jeu Japonais encore très réputé à ce jour !<a href="billeterie.html" class="ensavoirplus">R&eacute;server</a></p>
         </div>
         <div class="element-calendrier zoom">
-        <img class="onep" src="image/dessins3.jpg" alt="Calligraphie">
-        <p><span id="Cours">Cours</span> - Lundi 1er F&eacute;vrier 2021</p>
-        <p>Cours de calligraphie japonaise pour les jeunes souhaitant apprendre les bases du japonais !</p>
+        <img class="onep" src="image/naruto-ichiraku.png" alt="naruto-ichiraku">
+        <p><span id="Cours">Atelier</span> - Lundi 1er F&eacute;vrier 2021</p>
+        <p>Venez d&eacute;guster des ramens de chez Ichiraku comme dans l'oeuvre Naruto ! De quoi ravir vos papilles.</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/combat.jpg" alt="Danse">
@@ -129,7 +129,7 @@
         <p>Venez participer &aacute; un tournoi de Street Fighter, jeu de combat d'origine japonaise.</p>
         </div>
         <div class="element-calendrier zoom">
-        <img class="onep" src="image/cinema2.jpg" alt="Hiroshi Shimizu">
+        <img class="onep" src="image/cinema2.jpg" alt="momonoke">
         <p><span id="Diffusion">Diffusion </span>- Mercredi 3 F&eacute;vrier 2021</p>
         <p>(Re)d&eacute;couvrez ce classique de l'animation japonaise : Princesse Mononok&eacute;.</p>
         </div>
@@ -139,7 +139,7 @@
           <p>Atelier dessin avec des artistes ayant travaill&eacute;s pour des mangakas de renom.</p>
         </div>
         <div class="element-calendrier zoom">
-        <img class="onep" src="image/cours3.jpg" alt="ikebana">
+        <img class="onep" src="image/cours3.jpg" alt="papertoy">
         <p><span id="Cours">Cours</span> - Vendredi 5 F&eacute;vrier 2021</p>
         <p>Apprenez &aacute; fabriquer vos personnages pr&eacute;f&eacute;r&eacute;s avec un atelier papertoy. Parfait pour d&eacute;corer.</p>
         </div>
