--- a/evenements2.html
+++ b/evenements2.html
@@ -86,9 +86,9 @@
         <p>Venez participer &agrave; l'atelier cr&eacute;ation de nuno-z&ocirc;ri.</p>
         </div>
         <div class="element-calendrier zoom">
-        <img class="onep" src="image/jeu.jpg" alt="go">
-        <p><span id="Cours">Cours</span> - Samedi 6 F&eacute;vrier 2021</p>
-        <p>Le Samedi 6 F&eacute;vrier 2021 aura lieu un cours de go, un jeu de soci&eacute;t&eacute; populaire au Japon.</p>
+        <img class="onep" src="image/jeu.png" alt="masque">
+        <p><span id="Atelier">Atelier</span> - Samedi 6 F&eacute;vrier 2021</p>
+        <p>Le Samedi 6 F&eacute;vrier 2021 aura lieu un atelier de fabrication de masques !</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/jeu2.jpg" alt="shogi">
