--- a/horaires.html
+++ b/horaires.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Maison de la Culture du Japon à Paris">
     <title>Modalités de visite liées au Covid-19 - Maison de la Culture du Japon</title>
-    <link href="contact.css" rel="stylesheet" type="text/css" />
+    <link href="horaires.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
   </head>
 
