--- a/evenements.html
+++ b/evenements.html
@@ -87,13 +87,13 @@
         <div class="element-calendrier zoom">
           <img class="onep" src="image/japan_expo.jpg" alt="Japan Expo">
           <p><span id="Diffusion">Diffusion </span>- Samedi 23 Janvier 2021</p>
-          <p>Diffusion d'un court-métrage réalisé par nos collaborateurs de la Japan Expo.</p>
+          <p>Diffusion d'un court-métrage réalisé par nos collaborateurs de la Japan Expo 2019 et de jeunes volontaires.</p>
           <a href="billeterie.html" class="ensavoirplus">R&eacute;server</a>
         </div>
         <div class="element-calendrier zoom">
           <img class="onep" src="image/naruto.jpg" alt="Naruto">
           <p><span id="Diffusion">Diffusion </span>- Lundi 25 Janvier 2021</p>
-          <p>Diffusion d'épisodes de l'anim&eacute; Naruto en compagnie de dessinateurs de mangas.</p>
+          <p>Diffusion d'épisodes de l'anim&eacute; Naruto en compagnie de dessinateurs de mangas et distribution de posters.</p>
           <a href="billeterie.html" class="ensavoirplus">R&eacute;server</a>
         </div>
         <div class="element-calendrier zoom">
@@ -111,7 +111,7 @@
         <div class="element-calendrier zoom">
           <img class="onep" src="image/one_piece.jpg" alt="One piece">
           <p><span id="Diffusion">Diffusion </span>- Jeudi 28 Janvier 2021</p>
-          <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous !</p>
+          <p>D&eacute;couvrez le nouvel &eacute;pisode de One Piece en avant premi&egrave;re avec nous ! (Venez avec vos amis)</p>
           <a href="billeterie.html" class="ensavoirplus">R&eacute;server</a>
         </div>
         <div class="element-calendrier zoom">
@@ -123,7 +123,7 @@
         <div class="element-calendrier zoom">
           <img class="onep" src="image/pokemon.jpg" alt="Pokemon">
           <p><span id="Atelier">Atelier</span> - Samedi 30 Janvier 2021</p>
-          <p>Pour les amateurs d'anciennes consoles, apportez votre Gameboy Color et votre jeu Pokémon afin de vous amuser en compagnie d'autres fans du célèbre jeu Japonais encore très réputé à ce jour !</p>
+          <p>Apportez votre Gameboy Color et votre jeu Pokémon et venez vous amuser en compagnie d'autres fans.</p>
           <a href="billeterie.html" class="ensavoirplus">R&eacute;server</a>
         </div>
         <div class="element-calendrier zoom">
@@ -134,7 +134,7 @@
         <div class="element-calendrier zoom">
         <img class="onep" src="image/combat.jpg" alt="Danse">
         <p><span id="Atelier">Atelier</span> - Mardi 2 F&eacute;vrier 2021</p>
-        <p>Venez participer &aacute; un tournoi de Street Fighter, jeu de combat d'origine japonaise.</p>
+        <p>Venez participer &agrave; un tournoi de Street Fighter, jeu de combat d'origine japonaise.</p>
         </div>
         <div class="element-calendrier zoom">
         <img class="onep" src="image/cinema2.jpg" alt="momonoke">
