--- a/forum.html
+++ b/forum.html
@@ -59,7 +59,7 @@
                 <td><a href="acces.html">Accès</a></td>
               </tr>
               <tr>
-                <td><a href="contact.html">Informations pratiques</a></td>
+                <td><a href="horaires.html">Informations pratiques</a></td>
               </tr>
             </tbody>
           </table>
