--- a/billeterie.html
+++ b/billeterie.html
@@ -24,10 +24,6 @@
     
     <nav role="navigation">
       <div id="menuToggle">
-        <!--
-        A fake / hidden checkbox is used as click reciever,
-        so you can use the :checked selector on it.
-        -->
         <input type="checkbox" />
 
         <span></span>
@@ -66,7 +62,7 @@
         </ul>
       </div>
 
-        <!-- menu déroulant -->
+                                                                <!-- menu déroulant -->
       <ul>
         <div id="evenement">
           <li class="sous2"><a href="evenements.html">Agenda</a></li>
@@ -78,7 +74,7 @@
       </ul>
     </nav>
 
-                                                                    <!--calendrier-->
+                                                                    <!--Calendrier-->
     <div id="body">
       <div id="representation"> 
           <div class="ligne1">
@@ -148,7 +144,7 @@
               <img src="image/VISA.png" alt="Carte Visa"/>
           </div>
         </div>
-        
+      </div>
     </div>
 
     <footer>
